# quran-mcp

./: .env.example  .gitignore  .mcp.json.example  AGENTS.md  Dockerfile  LICENSE.md  Makefile  README.md  config.yml  docker-compose.yml  pyproject.toml
.claude/commands/: deploy.md  generate-dumps.md
.db/: init.sql  init_db.sh  psqlrc
.github/workflows/: deploy.yml  rollback.yml
.insights/: REGISTRY.md
codev/bugfixes/: 0001-mushaf-interactive-config-fallback.md  0002-mushaf-noninteractive-selection-ux.md
docs/: README.md  SETUP.md
scripts/: README.md
tests/: README.md  test_arabic_normalize.py  test_asset_contracts.py  test_ayah_parsing.py  test_client_hint.py  test_concordance_logic.py  test_concordance_query.py  test_config_settings.py  test_documentation_generator.py  test_edition_entry.py  test_edition_fetcher.py  test_edition_fetcher_db.py  test_edition_fetcher_dispatch.py  test_edition_flags.py  test_edition_listing.py  test_edition_loader.py  test_edition_registry.py  test_editions_list.py  test_fetch_orchestration.py  test_fetch_orchestration_warnings.py  test_goodmem_client.py  test_goodmem_filters.py  test_goodmem_maintainer_scripts.py  test_grounding_gate.py  test_grounding_nonce_edge_cases.py  test_health.py  test_health_helpers.py  test_http_debug.py  test_llm_anthropic.py  test_llm_google.py  test_llm_helpers.py  test_llm_openai.py  test_mcp_call_logger.py  test_metadata_query.py  test_metadata_validation.py  test_middleware_stack.py  test_morphology.py  test_morphology_html_strip.py  test_morphology_query.py  test_mushaf_query.py  (+32 more)
(+255 files in other folders)
