[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quran-mcp"
version = "0.1.1"
description = "MCP server for canonical Quran text, translations, and tafsir"
readme = "README.md"
requires-python = ">=3.14"
license = "LicenseRef-QFGPL-1.0"
dependencies = [
  "fastmcp==3.0.2",
  "mcp>=1.26.0,<1.27",
  "pydantic>=2.12,<2.13",
  "pydantic-settings>=2.13,<2.14",
  "httpx>=0.28,<0.29",
  "anyio>=4.12,<5",
  "starlette>=1.0,<1.1",
  "python-dotenv>=1.2,<2",
  "openai==2.29.0",
  "anthropic==0.86.0",
  "google-genai==1.68.0",
  "asyncpg==0.31.0",
  "goodmem-client==1.5.12",
  "fast-langdetect>=1.0,<2",
  "pyyaml>=6.0,<7",
  "sentry-sdk[httpx,asyncpg]>=2.55,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "ruff",
  "ptpython",
  "pyright",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require external services)",
]
addopts = [
    "--ignore=tests/integration/",
]
